Fixed text on feed floating over images on small resolutions

--- a/app/public/stylus/modules/feed.styl
+++ b/app/public/stylus/modules/feed.styl
@@ -30,11 +30,11 @@
     height 10em
     
   .Feed-item-left
-    margin-right 1.5em
+    margin-right 1.7em
     max-width 10em
 
   .Feed-item-right
-    margin 0 0 0 .6em
+    margin 0 0 0 .5em
     overflow hidden
 
   .Feed-item-title
